Bug 1374797 - Fix logic around triggering atoms GCs. r=sfink, a=jcristau * * * Bug 1384550 - Skip atoms collection if it's no longer possible r=sfink